Fri Nov  8 11:35:06 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* dir.c, pack.c, ruby.c, struct.c, vm_eval.c: use RARRAY_CONST_PTR().

Fri Nov  8 10:58:02 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* compile.c (iseq_build_from_ary_exception): use RARRAY_CONST_PTR().

	* compile.c (iseq_build_from_ary_body): ditto.

Fri Nov  8 10:49:34 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* enumerator.c (append_method): use RARRAY_CONST_PTR().

	* enumerator.c (lazy_init_iterator): ditto.

Fri Nov  8 02:44:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): check GVL before gc_rest_sweep().
	  vm_malloc_increase() can be called without GVL.
	  However, gc_rest_sweep() assumes acquiring GVL.
	  To avoid this problem, check GVL before gc_rest_sweep().
	  [Bug #9090]

	  This workaround introduces possibility to set malloc_limit as
	  wrong value (*1). However, this may be rare case. So I commit it.

	  *1: Without rest_sweep() here, gc_rest_sweep() can decrease
	      malloc_increase due to ruby_sized_xfree().

Fri Nov  8 02:50:25 2013  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: [DOC] specify arguments passed to ::random_bytes
	  By @chastell [Fixes GH-412] https://github.com/ruby/ruby/pull/412

Fri Nov  8 02:43:01 2013  Zachary Scott  <e@zzak.io>

	* ext/objspace/object_tracing.c: [DOC] trace_object_allocations_stop
	  By @srawlins [Fixes GH-421] https://github.com/ruby/ruby/pull/421

Fri Nov  8 02:34:20 2013  Zachary Scott  <e@zzak.io>

	* lib/net/ftp.rb: [DOC] Document Net::FTP.mdtm and .set_socket and fix
	  spelling typo, based on patch by @artfuldodger [Fixes GH-426]
	  https://github.com/ruby/ruby/pull/426

Fri Nov  8 02:14:37 2013  Zachary Scott  <e@zzak.io>

	* array.c: [DOC] Add note about negative indices in Array overview
	  By @ckaenzig [Fixes GH-427] https://github.com/ruby/ruby/pull/427

Fri Nov  8 02:09:12 2013  Zachary Scott  <e@zzak.io>

	* lib/csv.rb: [DOC] Fix typo in CSV.parse_line by @funky-bibimbap